--- a/css/app1.css
+++ b/css/app1.css
@@ -1,5 +1,6 @@
 html {
 	box-sizing: border-box;
+	background-color:#A6F7F5;
 }
 
 *,
@@ -41,7 +42,7 @@ h1 {
 
 .deck {
 	width: 85%;
-	background: #716F71;
+	background: linear-gradient(160deg, #d60e22 50%, #4eef26 100%);
 	padding: 1rem;
 	border-radius: 4px;
 	box-shadow: 8px 9px 26px 0 rgba(46, 61, 73, 0.5);
